--- a/movies/templates/movies/show.html
+++ b/movies/templates/movies/show.html
@@ -50,6 +50,11 @@
               href="{% url 'movies.delete_review' id=template_data.movie.id review_id=review.id %}">Delete
             </a>
             {% endif %}
+            {% if user.is_authenticated and user != review.user and not template_data.user_reported %}
+            <a class="btn btn-warning"
+              href="{% url 'movies.report_review' id=template_data.movie.id review_id=review.id %}">Report
+            </a>
+            {% endif %}
           </li>
           {% endfor %}
         </ul>
